Set pyscaffold version to v 2.5.10

--- a/setup.cfg
+++ b/setup.cfg
@@ -112,7 +112,8 @@ exclude =
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
-version = 3.0
+# version = 3.0
+version = 2.5.10
 package = numdifftools
 extensions =
     no_skeleton
