* Set pyscaffold version to v 2.5.11

--- a/setup.cfg
+++ b/setup.cfg
@@ -109,11 +109,11 @@ exclude =
     .eggs
     docs/conf.py
 
-[pyscaffold]
+#[pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 # version = 3.0
-version = 2.5.10
-package = numdifftools
-extensions =
-    no_skeleton
+version = 2.5.11
+#package = numdifftools
+#extensions =
+#    no_skeleton
