Attempt to fix installation for python 2.7 See issue #37

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,14 +40,15 @@ package_dir =
     =src
 # Add here dependencies of your project (semicolon-separated), e.g.
 # install_requires = numpy; scipy
-install_requires = 
+install_requires =
 # Add here test requirements (semicolon-separated)
 tests_require = pytest; pytest-cov; hypothesis; matplotlib
 
-[options.packages.find]
-where = src
-exclude =
-    tests
+# TODO: include again when setuptools work on python 2.7. See issue #37
+#[options.packages.find]
+#where = src
+#exclude =
+#    tests
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
