--- a/setup.cfg
+++ b/setup.cfg
@@ -44,11 +44,10 @@ install_requires =
 # Add here test requirements (semicolon-separated)
 tests_require = pytest; pytest-cov; hypothesis; matplotlib
 
-# TODO: include again when setuptools work on python 2.7. See issue #37
-#[options.packages.find]
-#where = src
-#exclude =
-#    tests
+[options.packages.find]
+where = src
+exclude =
+    tests
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
