--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,11 @@ install:
     else
       conda install --yes pyqt=4.11 matplotlib;
     fi
-  - pip install setuptools
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+       pip install setuptools==38.7
+    else
+       pip install setuptools
+    fi
   - pip install coveralls
   - pip install algopy
   - pip install pyscaffold==2.5.11
