Added dependencies into setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,8 +39,8 @@ include_package_data = True
 package_dir =
     =src
 # Add here dependencies of your project (semicolon-separated), e.g.
-# install_requires = numpy; scipy
-install_requires =
+install_requires = numpy; scipy; algopy; statsmodels
+
 # Add here test requirements (semicolon-separated)
 tests_require = pytest; pytest-cov; hypothesis; matplotlib
 
