--- a/setup.cfg
+++ b/setup.cfg
@@ -46,8 +46,8 @@ tests_require = pytest; pytest-cov; hypothesis; matplotlib
 
 [options.packages.find]
 where = src
-exclude =
-    tests
+# exclude =
+#     tests
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
