--- a/.travis.yml
+++ b/.travis.yml
@@ -47,16 +47,16 @@ before_install:
   - source activate condaenv
 # Install packages
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy pytest statsmodels coverage=4.3.4 line_profiler cython
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy pytest statsmodels coverage=4.3.4 line_profiler 
   - if [[ "$TRAVIS_PYTHON_VERSION" == "3.6" ]]; then
       conda install --yes pyqt=5 matplotlib;
     else
       conda install --yes pyqt=4.11 matplotlib;
     fi
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      pip install setuptools==37.0;
+      conda install --yes setuptools==37.0;
     else
-      pip install setuptools;
+      conda install --yes setuptools;
     fi
   - pip install coveralls
   - pip install algopy
@@ -80,7 +80,9 @@ script:
 #  - sed -i 's/filename="/filename=".\//g' coverage.xml
   - CODECLIMATE_REPO_TOKEN=9c5d44592ed63ccd3c2b4aabf54fd9aee50f02e21cd016f67f4287e68f708dba codeclimate-test-reporter
 #  - pylint numdifftools -r n --msg-template="{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}" > pylint-report.txt
-  - sonar-scanner -X
+  - if [[ "$TRAVIS_PYTHON_VERSION" != "3.5" ]]; then
+        sonar-scanner -X;
+    fi
 
 after_success:
   - coveralls
