Added line_profiler to requirements.

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ package_dir =
 install_requires = numpy; scipy; algopy; statsmodels
 
 # Add here test requirements (semicolon-separated)
-tests_require = pytest; pytest-cov; hypothesis; matplotlib
+tests_require = pytest; pytest-cov; hypothesis; matplotlib; line_profiler 
 
 [options.packages.find]
 where = src
