Attempt to fix issue #37

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,20 +34,21 @@ classifiers =
     Topic :: Scientific/Engineering :: Mathematics
 [options]
 zip_safe = False
-packages = find:
-include_package_data = True
-package_dir =
-    =src
+#packages = find:
+#include_package_data = True
+#package_dir =
+#    =src
+
 # Add here dependencies of your project (semicolon-separated), e.g.
 install_requires = numpy; scipy; algopy; statsmodels
 
 # Add here test requirements (semicolon-separated)
-tests_require = pytest; pytest-cov; hypothesis; matplotlib; line_profiler 
+tests_require = pytest; pytest-cov; hypothesis; matplotlib; line_profiler
 
-[options.packages.find]
-where = src
-exclude =
-     tests
+# [options.packages.find]
+# where = src
+# exclude =
+#     tests
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
@@ -110,10 +111,10 @@ exclude =
     docs/conf.py
 
 #[pyscaffold]
-# PyScaffold's parameters when the project was created.
-# This will be used when updating. Do not change!
-# version = 3.0
-version = 2.5.11
+## PyScaffold's parameters when the project was created.
+## This will be used when updating. Do not change!
+##version = 3.0
+#version = 2.5.11
 #package = numdifftools
 #extensions =
 #    no_skeleton
