--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,9 +39,9 @@ install:
   - conda update -q conda
   - conda info -a
   - conda install --yes conda-build
-  - conda config --add channels https://conda.anaconda.org/omnia
+  - conda config --add channels conda-forge
   - conda config --add channels https://conda.anaconda.org/qttesting
-  - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy algopy pytest pyqt=5 matplotlib pip statsmodels line_profiler IPython==5.0"
+  - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy algopy pytest pyqt matplotlib pip statsmodels line_profiler IPython==5.0"
 
   - activate test-environment
   - pip install coverage
