--- a/.travis.yml
+++ b/.travis.yml
@@ -46,17 +46,8 @@ before_install:
   - source activate condaenv
 # Install packages
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy pytest statsmodels coverage algopy line_profiler cython
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "3.6" ]]; then
-      conda install --yes pyqt=5 matplotlib;
-    else
-      conda install --yes pyqt=4.11 matplotlib;
-    fi
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      pip install setuptools==37.0;
-    else
-      pip install setuptools;
-    fi
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy pytest statsmodels coverage<=4.4 algopy pyqt matplotlib line_profiler cython
+  - pip install setuptools    
   - pip install coveralls
   - pip install pyscaffold==2.5.11
   - pip install codecov
