--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,9 @@ before_install:
   - source activate condaenv
 # Install packages
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy pytest statsmodels coverage=4.3.4 algopy pyqt matplotlib line_profiler cython
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy pytest statsmodels algopy pyqt matplotlib line_profiler cython
   - pip install setuptools    
+  - pip install coverage==4.3.4 
   - pip install coveralls
   - pip install pyscaffold==2.5.11
   - pip install codecov
