Replaced valarray function with numpy.full in step_generators.py Added try except on import of algopy Updated the badges used in the README.rst Replaced numpy.testing.Tester with pytest. Removed dependence on pyscaffold Simplified setup.py and setup.cfg Updated .travis.yml configuration Reorganized the documentation. Ongoing refactoring to simplify things:

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,11 @@
+graft docs
+graft src/numdifftools
+include requirements.txt
+include README.rst
 include LICENSE.txt
+include THANKS.txt
+exclude build_package.py
+global-exclude *.py[cod]
+global-exclude *.so
+global-exclude .svn*
+global-exclude Makefile
