--- a/setup.cfg
+++ b/setup.cfg
@@ -6,10 +6,12 @@
 name = numdifftools
 description = Solves automatic numerical differentiation problems in one or more variables.
 author = Per A Brodtkorb
-author-email = per.andreas.brodtkorb@gmail.com
+author_email = per.andreas.brodtkorb@gmail.com
 license = new BSD
+license_file = LICENSE.rst
 url = https://github.com/pbrod/numdifftools
-long-description = README.rst
+long_description = file: README.rst, CHANGELOG.rst, LICENSE.txt
+long_description_content_type = text/x-rst
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
@@ -22,6 +24,7 @@ classifiers =
     Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
     Environment :: Console
     Intended Audience :: Education
     Intended Audience :: Science/Research
@@ -34,27 +37,22 @@ classifiers =
     Topic :: Scientific/Engineering :: Mathematics
 [options]
 zip_safe = False
+include_package_data = True
+# src layout:
+package_dir =
+     =src
+packages = find:
 
-#packages = find:
-#include_package_data = True
-#package_dir =
-#    =src
+[options.packages.find]
+where = src
+
 
 # Add here dependencies of your project (semicolon-separated), e.g.
 install_requires = numpy; scipy; algopy; statsmodels
 
 # Add here test requirements (semicolon-separated)
-tests_require = pytest; pytest-cov; hypothesis; matplotlib; line_profiler
+tests_require = pytest; pytest-cov; pytest-pep8, hypothesis; matplotlib; line_profiler
 
-# [options.packages.find]
-# where = src
-# exclude =
-#     tests
-
-[options.extras_require]
-# Add here additional requirements for extra features, to install with:
-# `pip install git_numdifftools[PDF]` like:
-# PDF = ReportLab; RXP
 
 [test]
 # py.test options when running `python setup.py test`
@@ -62,18 +60,17 @@ addopts = src/numdifftools
           src/numdifftools/tests
 
 [tool:pytest]
-doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS# Options for py.test:
+doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
+# Options for py.test:
 # Specify command line options as you would do when invoking py.test directly.
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov numdifftools --cov-report term-missing
-    --verbose
-    --doctest_modules
-    --pep8norecursedirs =
-    dist
-    build
-    .tox
+    -rsxXf
+    --pyargs nvector
+    --doctest-modules
+    --pep8
+#    --codestyle  # python 3.4>
 
 norecursedirs =
     .*
@@ -82,11 +79,36 @@ norecursedirs =
     tmp*
 
 pep8ignore =
-    tests/*.py ALL
+    W503
     info.py ALL
+    conftest.py ALL
+    setup.py ALL
+#    tests/*.py ALL
+
+pep8maxlinelength=110
+# codestyle_max_line_length = 110
+# codestyle_ignore = W503
+
+[pycodestyle]
+count = False
+#ignore = E41,  # import: multiple imports on one line, module level import not at top
+#         E121, # continuation line under-indented for hanging indent
+#         E123, # closing bracket does not match indentation of opening bracket's line
+#         E126, # continuation line over-indented for hanging indent
+#         E133, # closing bracket is missing indentation
+#         E226, # missing whitespace around arithmetic operator
+#         E241, # multiple spaces after ','
+#         E242, # tab after ','
+#         E302, # expected 2 blank lines, found 1
+#         W503, # expect line breaks after binary operator
+#         W504, # expects line breaks before binary operators
+#         E704, # multiple statements on one line (def)
+max-line-length = 110
+statistics = True
+
 [aliases]
 docs = build_sphinx
-release = sdist bdist_wheel upload
+test = pytest
 
 [bdist_wheel]
 # Use this option if your package is pure-python
@@ -100,7 +122,9 @@ build_dir = docs/_build
 # Options for the devpi: PyPI server and packaging tool
 # VCS export must be deactivated since we are using setuptools-scm
 no-vcs = 1
-formats = bdist_wheel
+format =
+    bdist_wheel
+    sdist
 
 [flake8]
 # Some sane defaults for the code style checker flake8
@@ -110,12 +134,3 @@ exclude =
     dist
     .eggs
     docs/conf.py
-
-#[pyscaffold]
-## PyScaffold's parameters when the project was created.
-## This will be used when updating. Do not change!
-##version = 3.0
-#version = 2.5.11
-#package = numdifftools
-#extensions =
-#    no_skeleton
