--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,32 @@
 # Travis configuration file using the build matrix feature
 # Read more under http://docs.travis-ci.com/user/build-configuration/
+# and https://conda.io/docs/user-guide/tasks/use-conda-with-travis-ci.html
 # THIS SCRIPT IS SUPPOSED TO BE AN EXAMPLE. MODIFY IT ACCORDING TO YOUR NEEDS!
-dist: trusty
-sudo: required
-
+dist: xenial
+#sudo: required
 addons:
   sonarcloud:
     token:
       secure: "67bcbf1aefb992993fdd45b78fb4977a05be39b9"
   code_climate:
-    repo_token: 9c5d44592ed63ccd3c2b4aabf54fd9aee50f02e21cd016f67f4287e68f708dba
+    repo_token: e5452096cdc930ddd2a4bec5c310cdb9b657484e049a2475ef0b5a347b9e5812
 jdk:
   - oraclejdk8
-
-#sudo: false
+sudo: false
 language: python
 python:
+  # We don't actually use the Travis Python, but this keeps it organized.
   - 2.7
-  - 3.4
   - 3.5
   - 3.6
+matrix:
+  include:
+    - python: 3.7
+      sudo: true
+
+services:
+    - xvfb
+
 notifications:
   email: false
  
@@ -30,52 +37,51 @@ before_install:
     else
       wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
     fi
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      export PATH=/home/travis/miniconda2/bin:$PATH;
-    else
-      export PATH=/home/travis/miniconda3/bin:$PATH;
-    fi
-  - conda update --yes conda
-  - conda install --yes conda-build
-  - conda create --yes -n condaenv python=$TRAVIS_PYTHON_VERSION
-  - conda install --yes -n condaenv pip
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+  - conda install conda-build
+  - conda create -q -n condaenv python=$TRAVIS_PYTHON_VERSION
+  - conda install -n condaenv pip
   - conda config --add channels conda-forge
   - conda config --add channels https://conda.anaconda.org/qttesting
   - source activate condaenv
 # Install packages
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy pytest statsmodels algopy pyqt matplotlib line_profiler cython
+  - conda install python=$TRAVIS_PYTHON_VERSION numpy scipy pytest statsmodels algopy pyqt matplotlib coverage pytest-cov pytest-pep8 line_profiler cython
   - pip install setuptools    
-  - pip install coverage==4.3.4 
-  - pip install coveralls
-  - pip install pyscaffold==2.5.11
+# codeclimate reporter is only compatible with Coverage.py versions >=4.0,<4.4.
   - pip install codecov
-  - pip install codeclimate-test-reporter
   - pip install hypothesis
   - python setup.py install
 #  - conda build conda_recipe
 #  - conda install numdifftools --use-local
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+  - git fetch --unshallow --quiet
   - git config --global user.email "per.andreas.brodtkorb@gmail.com"
   - git config --global user.name "pbrod"
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "3.6" ]]; then
+        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter;
+        chmod +x ./cc-test-reporter;
+        ./cc-test-reporter before-build;
+    fi
 script:
   - coverage erase
   - coverage run --source=numdifftools setup.py test
+# see http://www.camillescott.org/2016/07/15/travis-pytest-scipyconf/
   - coverage xml -o coverage.xml
 #  - sed -i 's/filename="/filename=".\//g' coverage.xml
-  - CODECLIMATE_REPO_TOKEN=9c5d44592ed63ccd3c2b4aabf54fd9aee50f02e21cd016f67f4287e68f708dba codeclimate-test-reporter
 #  - pylint numdifftools -r n --msg-template="{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}" > pylint-report.txt
-  - if [[ "$TRAVIS_PYTHON_VERSION" != "3.5" ]]; then
+after_script:
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "3.6" ]]; then
         sonar-scanner -X;
+        ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT;
     fi
-
 after_success:
-  - coveralls
   - codecov
 cache:
   - apt
