Fixed a bug in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,7 +67,7 @@ doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
     -rsxXf
-    --pyargs nvector
+    --pyargs numdifftools
     --doctest-modules
     --pep8
 #    --codestyle  # python 3.4>
