--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ description = Solves automatic numerical differentiation problems in one or more
 author = Per A Brodtkorb
 author_email = per.andreas.brodtkorb@gmail.com
 license = new BSD
-license_file = LICENSE.rst
+license_file = LICENSE.txt
 url = https://github.com/pbrod/numdifftools
 long_description = file: README.rst, CHANGELOG.rst, LICENSE.txt
 long_description_content_type = text/x-rst
