--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,14 +47,15 @@ install:
   - pip install --upgrade pip
   - pip install coverage
   - pip install hypothesis
-  - python setup.py install
+  - python setup.py bdist_wheel
+  - pip install numdifftools --find-links=dist
 
 test_script:
   - coverage run --source=numdifftools setup.py test
 
 after_test:
   # If tests are successful, create binary packages for the project.
-  - python setup.py bdist_wheel"
+  # - python setup.py bdist_wheel"
   - python setup.py bdist_wininst"
   # - python setup.py bdist_msi"
   - ps: "ls dist"
