Put qoutes on "python -m pip install --upgrade pip" in appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,11 +44,11 @@ install:
   - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy algopy pytest pytest-runner pytest-pep8 pytest-cov pyqt matplotlib pip statsmodels line_profiler IPython"
 
   - activate test-environment
-  - pip install --upgrade pip
+  - "python -m pip install --upgrade pip"
   - pip install coverage
   - pip install hypothesis
-  - python setup.py bdist_wheel
-  - pip install numdifftools --find-links=dist
+#  - python setup.py bdist_wheel
+#  - pip install numdifftools --find-links=dist
 
 test_script:
   - coverage run --source=numdifftools setup.py test
