--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,10 +46,11 @@ install:
   - activate test-environment
   - "python -m pip install --upgrade pip"
   - "python -m pip install --upgrade setuptools"
+  - "python -m pip install --upgrade pytest"
   - pip install coverage
   - pip install hypothesis
-  - python setup.py sdist
-  - pip install numdifftools --find-links=dist
+#  - python setup.py sdist
+#  - pip install numdifftools --find-links=dist
 
 test_script:
   - coverage run --source=numdifftools setup.py test
