--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,6 +26,13 @@ environment:
     - PYTHON_VERSION: 3.6
       MINICONDA: C:\Miniconda36-x64
       PYTHON_ARCH: "64"
+    - PYTHON_VERSION: 3.7
+      MINICONDA: C:\Miniconda37
+      PYTHON_ARCH: "32"
+    - PYTHON_VERSION: 3.7
+      MINICONDA: C:\Miniconda37-x64
+      PYTHON_ARCH: "64"
+
 
 
 
@@ -38,7 +45,7 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
-  - conda install --yes conda-build
+#  - conda install --yes conda-build
   - conda config --add channels conda-forge
   - conda config --add channels https://conda.anaconda.org/qttesting
   - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy algopy pytest pytest-runner pytest-pep8 pytest-cov pyqt matplotlib pip statsmodels line_profiler IPython"
