--- a/setup.cfg
+++ b/setup.cfg
@@ -67,9 +67,9 @@ doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
     -rsxXf
-    --pyargs numdifftools
-    --doctest-modules
-    --pep8
+#    --pyargs numdifftools
+#    --doctest-modules
+#    --pep8
 #    --codestyle  # python 3.4>
 
 norecursedirs =
