--- a/setup.cfg
+++ b/setup.cfg
@@ -67,10 +67,14 @@ doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
     -rsxXf
+    --strict-markers
 #    --pyargs numdifftools
 #    --doctest-modules
 #    --pep8
 #    --codestyle  # python 3.4>
+
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
 
 norecursedirs =
     .*
