Fixes issue #49 : Dimension of Jacobian of vector valued function (length n) with scalar input should be n X 1
Added license.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 [metadata]
 name = numdifftools
 description = Solves automatic numerical differentiation problems in one or more variables.
-author = Per A Brodtkorb
+author = Per A. Brodtkorb
 author_email = per.andreas.brodtkorb@gmail.com
 license = new BSD
 license_file = LICENSE.txt
@@ -51,7 +51,7 @@ where = src
 install_requires = numpy; scipy; algopy; statsmodels
 
 # Add here test requirements (semicolon-separated)
-tests_require = pytest; pytest-cov; pytest-pep8, hypothesis; matplotlib; line_profiler
+tests_require = pytest; pytest-cov; pytest-pep8; hypothesis; matplotlib; line_profiler
 
 
 [test]
