Moved test_requires from setup.cfg to setup.py Added Latex to setup.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,6 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = numdifftools
 description = Solves automatic numerical differentiation problems in one or more variables.
 author = Per A. Brodtkorb
 author_email = per.andreas.brodtkorb@gmail.com
@@ -20,11 +19,10 @@ classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python
     Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Environment :: Console
     Intended Audience :: Education
     Intended Audience :: Science/Research
@@ -37,7 +35,7 @@ classifiers =
     Topic :: Scientific/Engineering :: Mathematics
 [options]
 zip_safe = False
-include_package_data = True
+include_package_data = True  # include everything in source control + MANIFEST.in
 # src layout:
 package_dir =
      =src
@@ -45,13 +43,6 @@ packages = find:
 
 [options.packages.find]
 where = src
-
-
-# Add here dependencies of your project (semicolon-separated), e.g.
-install_requires = numpy; scipy; algopy; statsmodels
-
-# Add here test requirements (semicolon-separated)
-tests_require = pytest; pytest-cov; pytest-pep8; hypothesis; matplotlib; line_profiler
 
 
 [test]
