Added organization to sonarcloud addon in .travis.yml

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,12 +23,12 @@ sonar.host.url=https://sonarcloud.io
 
 sonar.python.pylint=/usr/local/bin/pylint
 sonar.python.pylint_config=.pylintrc
-sonar.python.pylint.reportPath=pylint-report.txt	
+sonar.python.pylint.reportPaths=pylint-report.txt	
 
 
 # Unit tests
 sonar.python.xunit.reportPath=test-reports/*.xml
-sonar.python.coverage.reportPath=coverage.xml
+sonar.python.coverage.reportPaths=coverage-reports/*.xml
 
 # Integration tests
 sonar.python.coverage.itReportPath=it-coverage.xml
