--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # Required metadata
 sonar.projectKey=numdifftools
+sonar.organization=pbrod-github
 sonar.projectName=Python :: Numdifftools
 sonar.projectVersion=1.0
 
