Changed sonar.organization to default

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
 sonar.projectKey=numdifftools
-sonar.organization=pbrod-github
+sonar.organization=default
 sonar.projectName=Python :: Numdifftools
 sonar.projectVersion=1.0
 
