Changed organization to Attic

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
 sonar.projectKey=numdifftools
-sonar.organization=default
+sonar.organization=Attic
 sonar.projectName=Python :: Numdifftools
 sonar.projectVersion=1.0
 
