--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,9 +29,9 @@ environment:
 #    - PYTHON_VERSION: 3.4
 #      MINICONDA: C:\Miniconda3
 #      PYTHON_ARCH: "32"
-    - PYTHON_VERSION: 3.8
-      MINICONDA: C:\Miniconda38-x64
-      PYTHON_ARCH: "64"
+#    - PYTHON_VERSION: 3.8
+#      MINICONDA: C:\Miniconda38-x64
+#      PYTHON_ARCH: "64"
 
 
 
