--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,13 +26,12 @@ environment:
     - PYTHON_VERSION: 3.7
       MINICONDA: C:\Miniconda37-x64
       PYTHON_ARCH: "64"
-#    - PYTHON_VERSION: 3.4
-#      MINICONDA: C:\Miniconda3
-#      PYTHON_ARCH: "32"
-#    - PYTHON_VERSION: 3.8
-#      MINICONDA: C:\Miniconda38-x64
+    - PYTHON_VERSION: 3.8
+      MINICONDA: C:\Miniconda38-x64
+      PYTHON_ARCH: "64"
+#    - PYTHON_VERSION: 3.9
+#      MINICONDA: C:\Miniconda39-x64
 #      PYTHON_ARCH: "64"
-
 
 
 
