--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # Required metadata
-sonar.projectKey=numdifftools
-sonar.organization=default
-sonar.projectName=Python :: Numdifftools
+sonar.projectKey=pbrod_numdifftools
+sonar.organization=pbrod-github
+sonar.projectName=numdifftools
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
