--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,10 @@ script:
   - coverage run --source=numdifftools -m py.test build/lib
 # see http://www.camillescott.org/2016/07/15/travis-pytest-scipyconf/
   - coverage xml -o ./coverage-reports/coverage.xml
-#  - sed -i 's/filename="/filename=".\//g' coverage.xml
+  - head ./coverage-reports/coverage.xml
+# see https://community.sonarsource.com/t/sonarqube-reports-zero-coverage-from-coverage-xml-generated-by-coverage-py-in-azure-devops/28817/7
+  - sed -i 's/home\/travis\/build\/pbrod\/numdifftools/g' ./coverage-reports/coverage.xml
+#  - sed -i 's/filename="/filename=".\//g' ./coverage-reports/coverage.xml
 #  - pylint numdifftools -r n --msg-template="{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}" > pylint-report.txt
 after_script:
   - if [[ "$TRAVIS_PYTHON_VERSION" == "3.7" ]]; then
