Added doctests to setup.cfg.

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,7 @@ doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
 addopts =
     -rsxXf
 #    --pyargs numdifftools
-#    --doctest-modules
+    --doctest-modules
 #    --pep8
 #    --codestyle  # python 3.4>
 
