Updated pycodestyle ignore section in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -101,6 +101,11 @@ ignore =
 #         E704, # multiple statements on one line (def)
 max-line-length = 110
 statistics = True
+exclude = 
+    info.py
+    conftest.py
+    setup.py
+    licence.py
 
 [aliases]
 docs = build_sphinx
