--- a/requirements.readthedocs.txt
+++ b/requirements.readthedocs.txt
@@ -1,4 +1,4 @@
-sphinx<=1.6.7
+sphinx>=3.0.4
 numpydoc>=0.5
 sphinx_rtd_theme>=0.1.7
 scipy>=0.8
@@ -6,3 +6,4 @@ algopy>=0.4
 statsmodels>=0.6
 hypothesis>=3.6
 pytest
+sphinxcontrib-bibtex
