--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,16 +50,19 @@ install:
   - "python -m pip install --upgrade pytest"
   - pip install coverage
   - pip install hypothesis
+  - python setup.py install
 #  - python setup.py sdist
 #  - pip install numdifftools --find-links=dist
 
 test_script:
-  - coverage run --source=numdifftools setup.py test
+  # - coverage run --source=numdifftools setup.py test
+  - coverage run --source=numdifftools -m py.test build/lib
+
 
 after_test:
   # If tests are successful, create binary packages for the project.
   # - python setup.py bdist_wheel"
-  - python setup.py bdist_wininst"
+  # - python setup.py bdist_wininst"
   # - python setup.py bdist_msi"
   - ps: "ls dist"
 
