Removed latex option from setup.py Try to fix MINICONDA38 in appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,8 +21,8 @@ environment:
       MINICONDA: C:\Miniconda37-x64
       PYTHON_ARCH: "64"
     - PYTHON_VERSION: 3.8
-      MINICONDA: C:\Miniconda38-x64
-      PYTHON_ARCH: "64"
+      MINICONDA: C:\Miniconda38
+      PYTHON_ARCH: "32"
 #    - PYTHON_VERSION: 3.9
 #      MINICONDA: C:\Miniconda39-x64
 #      PYTHON_ARCH: "64"
