Added matplotlib to requirements.txt Removed failing python 3.8 from appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,9 +20,9 @@ environment:
     - PYTHON_VERSION: 3.7
       MINICONDA: C:\Miniconda37-x64
       PYTHON_ARCH: "64"
-    - PYTHON_VERSION: 3.8
-      MINICONDA: C:\Miniconda38
-      PYTHON_ARCH: "32"
+#    - PYTHON_VERSION: 3.8
+#      MINICONDA: C:\Miniconda38-x64
+#      PYTHON_ARCH: "64"
 #    - PYTHON_VERSION: 3.9
 #      MINICONDA: C:\Miniconda39-x64
 #      PYTHON_ARCH: "64"
@@ -55,7 +55,9 @@ install:
 #  - pip install numdifftools --find-links=dist
 
 test_script:
+  # - coverage run --source=numdifftools setup.py test
   - coverage run --source=numdifftools -m py.test build/lib
+
 
 after_test:
   # If tests are successful, create binary packages for the project.
