--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install wheel
-          if ( -f requirements.txt ); then pip install -r requirements.txt; fi
-          if ( -f requirements.tests.txt ); then pip install -r requirements.tests.txt; fi
+          pip install -r requirements.txt
+          pip install -r requirements.tests.txt
           pip install .
 
       - name: Run tests
