Commented out deprecated pep8ignore and pep8maxlinelength in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,16 +73,16 @@ norecursedirs =
     docs
     tmp*
 
-pep8ignore =
-    W503
-    info.py ALL
-    conftest.py ALL
-    setup.py ALL
+#pep8ignore =
+#    W503
+#    info.py ALL
+#    conftest.py ALL
+#    setup.py ALL
 #    tests/*.py ALL
 
-pep8maxlinelength = 110
-# codestyle_max_line_length = 110
-# codestyle_ignore = W503
+# pep8maxlinelength = 110
+#codestyle_max_line_length = 110
+#codestyle_ignore = W503
 
 [pycodestyle]
 count = False
