--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ __pycache__/*
 .cache/*
 .*.swp
 */.ipynb_checkpoints/*
+.hypothesis
 
 # Project files
 .ropeproject
@@ -18,6 +19,7 @@ __pycache__/*
 .pydevproject
 .settings
 .idea
+.vscode
 
 # Package files
 *.egg
