--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
+# See https://jooyal.com/posts/2025/coding/using-pdm-in-python/
 #Recommended build on master branch
 # git pull origin
 # pdm check-style
@@ -61,7 +62,7 @@ classifiers = [
 
 [project.optional-dependencies]
 plot =["matplotlib>=3.8.0",
-       "Cartopy>=0.22.0",]
+       ]
 
 [project.urls]
 repository  = "https://github.com/pbrod/numdifftools/"
@@ -86,8 +87,10 @@ path = "src/numdifftools/__init__.py"
 build-docs-html = "sphinx-build -b html docs docs/_build/html -d docs/_build/doctrees"
 build-docs-latex = "sphinx-build -b latex docs docs/_build/latex -d docs/_build/doctrees"
 build-docs-pdf = "sphinx-build -b latexpdf docs docs/_build/latex -d docs/_build/doctrees"
-lock_win64 = "pdm lock -L pdm_windows.lock --python 3.12 --strategy no_direct_minimal_versions --platform windows -dG all"
-lock_linux = "pdm lock -L pdm_linux.lock --python 3.12 --strategy no_direct_minimal_versions --platform linux -dG all"
+lock_py314 = "pdm lock -L pdm.lock314 --python 3.14 --strategy no_direct_minimal_versions -dG all"
+lock_win64 = "pdm lock -L pdm_windows.lock --python 3.13 --strategy no_direct_minimal_versions --platform windows -dG all"
+lock_linux = "pdm lock -L pdm_linux.lock --python 3.13 --strategy no_direct_minimal_versions --platform linux -dG all"
+lock_macos = "pdm lock -L pdm_macos.lock --python 3.13 --strategy no_direct_minimal_versions --platform macos -dG all"
 
 format = "ruff format ./src/"  # format code
 check-style = "ruff check ./src/"  # check code style
@@ -125,9 +128,11 @@ test = [
     "pytest",
     "pytest-cov",
     "pytest-pep8",
-    "hypothesis",
+    "algopy>=0.4",
+    "statsmodels>=0.6",
+    "line_profiler",
+    "hypothesis>=3.6",
     "matplotlib>=3.8.0",
-    "Cartopy>=0.22.0",
     "pytest-ruff>=0.4.1",
     "ruff>=0.0.47",
     # "gitlint>=0.19",
