chore (workflows/test.yml) : Integrated coverage reporting with testing

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -103,32 +103,9 @@ jobs:
 
       - name: Run Tests
         run: pdm run pytest
-
-  coverage:
-    needs: ci
-    # Running coverage only on push to the "master" branch
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.13"]
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of Sonar analysis
-      - name: Set up PDM
-        uses: pdm-project/setup-pdm@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          pdm install -dG test
-      - name: Run Tests and report to CodeCov  
-        run: |
-            pdm run pytest
-
-      # See: https://martinheinz.dev/blog/69 "Ultimate CI Pipeline for All of Your Python Projects"
       - name: Use Codecov to track coverage
+        if: matrix.python_version == '3.13' && matrix.os == 'ubuntu-latest'
+        # See: https://martinheinz.dev/blog/69 "Ultimate CI Pipeline for All of Your Python Projects"
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
